--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/logo-transparent-blanc-2000x865-12-295x128-21.png" alt="Mobirise"></a>
+                        <a href="https://mobirise.com" class="mbri-laptop mbr-iconfont mbr-iconfont-menu navbar-logo"></a>
                         <a class="navbar-caption" href="https://mobirise.com"></a>
                     </div>
 
@@ -62,9 +62,9 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy drag and drop website design software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4" style="background-image: url(assets/images/procell-victoriaville-fond-acceuil-2000x1333-44-2000x1333-71-2000x1333-12.png);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple html web page generator software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header1-4" style="background-color: rgb(160, 126, 73);">
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);"></div>
+    
 
     <div class="mbr-table-cell">
 
@@ -192,7 +192,6 @@
   <script src="assets/viewportChecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/social-feed-plugin/codebird.min.js"></script>
   <script src="assets/social-feed-plugin/moment.js"></script>
   <script src="assets/social-feed-plugin/en-gb.js"></script>
